# ForeCast

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  contracts.md  devnet-addresses.json  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
api/: [...forecast].js  settlement.js  stake.js
api/odds/: update.js
api/polymarket/: [...path].js  events.js  markets.js
api/settlement/: register.js
arcium/forecast-mxe/: README.md
arcium/forecast-mxe/encrypted-ixs/: forecast_private_market.rs
arcium/forecast-mxe/forecast_mxe/: Anchor.toml  Cargo.toml  package-lock.json  package.json
arcium/forecast-mxe/forecast_mxe/encrypted-ixs/: Cargo.toml
arcium/forecast-mxe/forecast_mxe/encrypted-ixs/src/: lib.rs
arcium/forecast-mxe/forecast_mxe/patched-crates/asn1-rs-impl/: Cargo.toml
arcium/forecast-mxe/forecast_mxe/patched-crates/asn1-rs-impl/src/: lib.rs
arcium/forecast-mxe/forecast_mxe/programs/forecast_mxe/: Cargo.toml
arcium/forecast-mxe/forecast_mxe/programs/forecast_mxe/src/: lib.rs
arcium/forecast-mxe/forecast_mxe/tests/: forecast_mxe.ts
programs/forecast/: Cargo.toml
programs/forecast/src/: lib.rs
scripts/: initializeForecast.mjs
server/: arciumStakeService.mjs
src/: App.jsx  main.jsx  polyfills.js
src/components/: Primitives.jsx  index.js
src/data/: forecastData.js
src/integrations/: arcium.js  forecast.js  polymarket.js
src/lib/: async.js  formatters.js  marketMaker.js
src/pages/: CreateMarketPage.jsx  LandingPage.jsx  LeaderboardPage.jsx  MarketDetailPage.jsx  MarketsPage.jsx  ProfilePage.jsx  RoomDetailPage.jsx  RoomsPage.jsx  index.js
src/styles/: global.css
