[package]
edition = "2018"
name = "asn1-rs-impl"
version = "0.2.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
description = "Implementation details for the `asn1-rs` crate"
homepage = "https://github.com/rusticata/asn1-rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/rusticata/asn1-rs.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2.0"
